--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -6,13 +6,25 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 	<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
 	<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+  <!-- Square card -->
+  <style>
+  /*.demo-card-square.mdl-card {
+    width: 300px;
+    height: 300px;
+  }*/
+  .demo-card-square > .mdl-card__title {
+    color: #fff;
+    background:
+      url('../assets/demos/dog.png') bottom right 15% no-repeat #5c6bc0;
+  }
+  </style>
 </head>
 <body>
 <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer
             mdl-layout--fixed-header">
   <header class="mdl-layout__header">
     <div class="mdl-layout__header-row">
-      <span class="mdl-layout-title">Thanks!!</span>
+      <span class="mdl-layout-title">Contacts</span>
       <div class="mdl-layout-spacer"></div>
     </div>
   </header>
@@ -27,11 +39,33 @@
   <main class="mdl-layout__content">
     <div class="page-content">
 	<div class="mdl-grid">
-	  <div class="mdl-cell mdl-cell--2-col"></div>
-	  <div class="mdl-cell mdl-cell--8-col">
-		<h3>Your response is recorded!!!</h3>
-	  </div>
-	  <div class="mdl-cell mdl-cell--2-col"></div>
+  {% for t in team %}
+	  <div class="mdl-cell mdl-cell--3-col">
+      <div class="demo-card-square mdl-card mdl-shadow--2dp">
+        <div class="mdl-card__title mdl-card--expand">
+          <h2 class="mdl-card__title-text">{{t.name}}</h2>
+        </div>
+        <div class="mdl-card__supporting-text">
+            <p>{{t.branch}}</p>
+            <p>
+              <a href="tel:{{t.phone}}">
+                <i class="material-icons">phone</i>
+                {{t.phone}}
+              </a>
+            </p>
+            <p>
+              <a href="mailto:{{t.email}}" target="_top">
+                <i class="material-icons">mail</i>
+                {{t.email}}
+              </a>
+            </p>
+          </ul>
+        </div>
+      </div> 
+    </div>
+  {% empty %}
+  <p>No one here......</p>
+  {% endfor %}
 	</div>
     </div>
   </main>
