--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="{% url 'index' %}">Attendence</a>
       <a class="mdl-navigation__link" href="{% url 'feedback' %}">Feedback</a>
+      <a class="mdl-navigation__link" href="{% url 'contacts' %}">Contacts</a>      
     </nav>
   </div>
   <main class="mdl-layout__content">
