--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Web Dev Workshop</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-	<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.indigo-pink.min.css">
-	<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+	<link rel="stylesheet" href="/static/css/material.min.css">
+	<script defer src="/static/js/material.min.js"></script>
   <!-- Square card -->
   <style>
   /*.demo-card-square.mdl-card {
@@ -34,6 +35,8 @@
       <a class="mdl-navigation__link" href="{% url 'index' %}">Attendence</a>
       <a class="mdl-navigation__link" href="{% url 'feedback' %}">Feedback</a>
       <a class="mdl-navigation__link" href="{% url 'contacts' %}">Contacts</a>
+      <a class="mdl-navigation__link" target="__blank" href="/static/backend.pdf">Backend Slide</a>
+      <a class="mdl-navigation__link" target="__blank" href="/static/frontend.pdf">Frontend Slide</a>    
     </nav>
   </div>
   <main class="mdl-layout__content">
@@ -48,14 +51,14 @@
         <div class="mdl-card__supporting-text">
             <p>{{t.branch}}</p>
             <p>
+            <i>Phone: </i>
               <a href="tel:{{t.phone}}">
-                <i class="material-icons">phone</i>
                 {{t.phone}}
               </a>
             </p>
             <p>
+            <i>Mail: </i>
               <a href="mailto:{{t.email}}" target="_top">
-                <i class="material-icons">mail</i>
                 {{t.email}}
               </a>
             </p>
@@ -63,6 +66,7 @@
         </div>
       </div> 
     </div>
+    <div class="mdl-cell mdl-cell--3-col"></div>
   {% empty %}
   <p>No one here......</p>
   {% endfor %}
